@@ -218,11 +218,11 @@ FileFilter * FileFilterMgr::LoadFilterFile(LPCTSTR szFilepath, int & error)
 
 	CString sLine;
 	bool lossy = false;
-	BOOL done = FALSE;
+	BOOL bLinesLeft = TRUE;
 	do
 	{
 		// Returns false when last line is read
-		done = file.ReadString(sLine, &lossy);
+		bLinesLeft = file.ReadString(sLine, &lossy);
 		sLine.TrimLeft();
 		sLine.TrimRight();
 
@@ -264,7 +264,7 @@ FileFilter * FileFilterMgr::LoadFilterFile(LPCTSTR szFilepath, int & error)
 			CString str = sLine.Mid(2);
 			AddFilterPattern(pfilter->dirfilters, str);
 		}
-	} while (done == FALSE);
+	} while (bLinesLeft == TRUE);
 
 	return pfilter;
 }
